--- a/indra/newview/CMakeLists.txt
+++ b/indra/newview/CMakeLists.txt
@@ -1782,6 +1782,22 @@ if (WINDOWS)
            ${SHARED_LIB_STAGING_DIR}/Debug/fmodexL.dll
           )
     endif (FMODEX)
+
+    get_filename_component(PYTHON_DIRECTORY ${PYTHON_EXECUTABLE} DIRECTORY)
+
+    # http://pythonhosted.org/PyInstaller/#options
+	add_custom_command(
+	   OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/SL_Launcher.exe
+	   COMMAND ${PYTHON_DIRECTORY}/Scripts/pyinstaller.exe
+	   ARGS
+	     --onefile 
+         --log-level WARN
+		 --distpath ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR} 
+		 ${CMAKE_SOURCE_DIR}/viewer_components/manager/SL_Launcher
+	   COMMENT "Performing pyinstaller compile of SL_Launcher"
+	)
+
+	add_custom_target(compile_w_viewer_launcher ALL DEPENDS ${CMAKE_CFG_INTDIR}/SL_Launcher.exe)
     
     add_custom_command(
       OUTPUT  ${CMAKE_CFG_INTDIR}/copy_touched.bat
