--- a/.hgignore
+++ b/.hgignore
@@ -17,6 +17,7 @@ build-darwin-*
 build-vc80/
 build-vc100/
 build-vc120/
+build-vc120_x64/
 indra/build-vc[0-9]*
 indra/CMakeFiles
 indra/lib/mono/1.0/*.dll
