--- a/indra/newview/CMakeLists.txt
+++ b/indra/newview/CMakeLists.txt
@@ -2300,6 +2300,7 @@ if (LL_TESTS)
 
   set_source_files_properties(
     lllogininstance.cpp
+    llhasheduniqueid.cpp
     PROPERTIES
     LL_TEST_ADDITIONAL_LIBRARIES "${BOOST_SYSTEM_LIBRARY}"
   )
