DRTVWR-418: Suppress llcorehttp tests until we solve TC harness issues.

--- a/indra/llcorehttp/CMakeLists.txt
+++ b/indra/llcorehttp/CMakeLists.txt
@@ -96,7 +96,12 @@ target_link_libraries(
   )
 
 # tests
-if (LL_TESTS)
+##==========================================================================
+## DANGER WILL ROBINSON! WARNING!
+## Leaving these tests commented out is extremely hazardous, since llcorehttp
+## is so central to viewer processing.
+##==========================================================================
+if (0) ## LL_TESTS)
   SET(llcorehttp_TEST_SOURCE_FILES
       tests/test_allocator.cpp
       )
@@ -221,5 +226,4 @@ endif (DARWIN)
 
   target_link_libraries(http_texture_load ${example_libs})
 
-endif (LL_TESTS)
-
+endif ()
